--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
-LavaUnity/obj/Debug
+LavaUnity/Library/PackageCache/com.unity.analytics@2.0.16/UnityEngine.Analytics.dll.mdb.meta
+LavaUnity/Library/
+LavaUnity/Temp/
+LavaUnity/obj/Debug/Assembly-CSharp-Editor.csprojAssemblyReference.cache
+LavaUnity/obj/Debug/Assembly-CSharp.csprojAssemblyReference.cache
