--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@ LavaUnity/Library/
 LavaUnity/Temp/
 LavaUnity/obj/Debug/Assembly-CSharp-Editor.csprojAssemblyReference.cache
 LavaUnity/obj/Debug/Assembly-CSharp.csprojAssemblyReference.cache
+LavaUnity/.vs/
+LavaUnity/obj/Debug/Assembly-CSharp.csproj.CoreCompileInputs.cache
+LavaUnity/obj/
+*.csproj
+*.sln
